# Atlasv1

./: Dockerfile  PHASED_PLAN_V2.md  PHASED_PLAN_V3.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway-web.toml  railway.toml  requirements.txt
engine/: __init__.py  acp.py  api_server.py  auth.py  cli.py  connectors.py  core.py  eval.py  observability.py  policy.py  runtime.py  tenants.py  worker_main.py  workers.py
engine/brain/: __init__.py  adapter.py  agents.py  learning.py  tools.py
engine/construction/: __init__.py  costs.py  pipeline.py  schedule.py
engine/contracts/: __init__.py  analyzer.py  montecarlo.py  strategic_contracts.py  templates.py  validation.py
engine/db/: __init__.py  acp_repositories.py  cache.py  contract_repositories.py  deal_repositories.py  egm_repositories.py  forecast_repositories.py  models.py  portfolio_repositories.py  repositories.py  session.py  settings.py  strategic_repositories.py
engine/egm/: __init__.py  analytics.py  classifier.py  connector.py  features.py  forecaster.py  pipeline.py  prediction.py
engine/financial/: __init__.py  (+5 more)
tests/: test_p1_fixes.py  test_phase0a.py  test_phase1.py  test_phase1_acp.py  test_phase2.py  test_phase2_financial.py  test_phase2_tools.py  test_phase3.py  test_phase3_egm_data.py  test_phase4.py  test_phase4_forecaster.py  test_phase5_contracts.py  test_phase6_realestate.py  test_phase7_portfolio.py  test_phase89_brain.py  test_phase8_brain.py  test_strategic.py  test_v3_fixes.py
web/: Dockerfile  next.config.mjs  next.config.ts  package.json  tailwind.config.ts
(+45 files in other folders)
