[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-engine"
version = "2.0.0"
description = "Enterprise-grade agentic AI pipeline engine"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    # Database
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "psycopg2-binary>=2.9,<3.0",

    # API server
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.0,<3.0",

    # Auth
    "PyJWT>=2.8,<3.0",

    # Queue + cache
    "redis>=5.0,<6.0",
    "rq>=1.16,<2.0",

    # LLM providers
    "anthropic>=0.42,<1.0",
    "openai>=1.60,<2.0",

    # Vector store (optional — falls back to in-memory)
    # "qdrant-client>=1.12,<2.0",  # uncomment when QDRANT_URL is configured
    # "voyageai>=0.3,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
agentic-engine = "engine.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["engine"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
